--- a/css/nav.css
+++ b/css/nav.css
@@ -1,3 +1,6 @@
+.header{
+	padding-top:2em;
+}
 .h-button{
 	text-align: right;
 }
@@ -24,5 +27,15 @@
 	height: auto;
 	position: absolute;
 	top:-75px;
+}
+
+.fixed-head{
+  position: fixed;
+  top: 0; 
+  width: 100%;
+  margin: 0 auto;
+  z-index: 99;
+  background-color:#fff;
+  
 }
 
