--- a/css/home.css
+++ b/css/home.css
@@ -59,11 +59,7 @@
 .home3{
 	margin-top:3em;
 }
-.or-line{
-	width: 120px;
-	height: 8px;
-	background-color: #f37422;
-}
+
 .video-wrapper{
 
 }
@@ -168,7 +164,7 @@ video.has-media-controls-hidden::-webkit-media-controls {
 }
 .box-clock{
 	padding:1em 0.5em;
-	margin:1em 1em 0 1em;
+	
 	background-color: #0a395a;
 	text-transform: uppercase;	
 }
@@ -179,6 +175,13 @@ video.has-media-controls-hidden::-webkit-media-controls {
 }
 .box-clock span:last-child{
 	color:#fff;
+}
+.counting .row{
+	margin-top:2em;
+}
+
+.counting .row .col-md-3{
+	max-width: 20%;
 }
 .homenews{
 	position: relative;
