--- a/css/textstyle.css
+++ b/css/textstyle.css
@@ -1,6 +1,15 @@
 .t-ban{
 	font-size: 40px;
 }
+.t-banner{
+	color:#fff;
+	font-size: 50px;
+	font-weight: 700;
+	line-height: 1.2;
+}
+
+
+
 .t-light{
  font-weight: 300;
 }
@@ -10,13 +19,18 @@
 .t-bolder{
  font-weight: 700;
 }
+.t-50{
+	font-size: 50px;
+}
 .t-40{
  font-size: 40px;
 }
 .t-20{
  font-size: 20px;
 }
-
+.t-28{
+	font-size: 28px;
+}
 
 
 
