--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 @import "nav.css";
 @import "button.css";
 @import "textstyle.css";
-	<style>
+
 /* Paste this css to your style sheet file or under head tag */
 /* This only works with JavaScript, 
 if it's not present, don't show loader */
@@ -19,11 +19,11 @@ if it's not present, don't show loader */
 .wrapper{
   display: none;
 }
-</style>
 
 html, body{
 	font-family: 'Roboto', ;
 	margin:0 auto;
+	font-size: 14px;
 }
 
 .container{
@@ -56,7 +56,7 @@ html, body{
 
 .newletter{
 	background-color: #0a395a;
-	padding:2em 0 3.5em 0;
+	padding:3em 0 3.5em 0;
 }
 .newletter-email{
 	color:#fff;
@@ -84,4 +84,40 @@ html, body{
 }
 .logo-link{
 	width: 100%;
+}
+.banner{
+	background: #0a395a;
+	padding: 100px 0;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	
+}
+
+/*hr*/
+.or-line-140{
+	width: 140px;
+	height: 8px;
+	background-color: #f37422;
+}
+.or-line{
+	width: 120px;
+	height: 8px;
+	background-color: #f37422;
+}
+
+
+/*content*/
+
+.sec-content{
+	padding:3rem 0 2.5rem 0;
+	 line-height: 1.43;
+}
+.w-80{
+	width: 80%;
+	margin:0 auto;
+}
+.w-60{
+	width: 60%;
+	margin:0 auto;
 }
