--- a/css/nav.css
+++ b/css/nav.css
@@ -6,12 +6,14 @@
 }
 .navbar{
 	background-color: #fff;
+	margin-bottom: 1em;
 
 }
 .navbar-light .navbar-nav .nav-link{
 	color: #0A395A;
 	font-weight: 500;
 	overflow-x: hidden;
+	font-size: 16px;
 }
 
 .navbar-light .navbar-nav .nav-link:hover{
@@ -23,7 +25,7 @@
 	
 }
 .navbar-brand img{
-	width: 210px;
+	width: 230px;
 	height: auto;
 	position: absolute;
 	top:-75px;
