--- a/css/news.css
+++ b/css/news.css
@@ -46,3 +46,20 @@
 	width: 8px;
 	margin-left:5px;
 }
+.pagination{
+	margin-top:2em;
+	margin-left:auto;
+	margin-right: auto;
+	width: 200px;
+}
+.page-item .page-link{
+	background-color: transparent;
+	border: solid 1px #bcbcbc;
+	color: #0a395a;
+	margin:0 0.2rem;
+}
+.page-item.active .page-link{
+	background-color: transparent;
+	border:solid 2px #f37422;
+	color: #0a395a;;
+}
