--- a/css/home.css
+++ b/css/home.css
@@ -116,17 +116,32 @@ video.has-media-controls-hidden::-webkit-media-controls {
 
 .home4{
 	margin-top:3em;
-	background-color: #0a395a;
+	background-color:transparent;
 }
 .why-should{
 	
 	padding:4em 1em 4em 2em;
+	position: relative;
+	z-index: 1;
 }
 .why-left{
-	border-left:10px solid #fff;
+	border-left:5px solid #fff;
+	z-index: 1;
+	position: relative;
+	overflow: hidden;
+	padding-right: 0;
+}
+.home_why{
+	position: absolute;
+	z-index: 0;
+	width: 100%;
 }
 .why-right{
-	border-right:10px solid #fff;
+	border-right:5px solid #fff;
+	z-index: 1;
+	position: relative;
+	overflow: hidden;
+	padding-left: 0;
 }
 .explore{
 	color:#fff;
@@ -143,7 +158,7 @@ video.has-media-controls-hidden::-webkit-media-controls {
 	animation: move-arrow 1s ease infinite;
 }
 .home5{
-	margin-top:20px;
+	margin-top:25px;
 	padding:40px 0;
 	background-color: #e8f0f7;
 	background-image: url("../images/home/orange-shape.svg");
