--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,10 @@ html, body{
 	width: 80%;
 	margin:0 auto;
 }
+.w-70{
+	width: 70%;
+	margin:0  auto; 
+}
 .w-60{
 	width: 60%;
 	margin:0 auto;
