--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ if it's not present, don't show loader */
 }
 
 html, body{
-	font-family: 'Roboto', ;
+	font-family:'Roboto';
 	margin:0 auto;
 	font-size: 14px;
 }
@@ -111,7 +111,7 @@ html, body{
 
 .sec-content{
 	padding:3rem 0 2.5rem 0;
-	 line-height: 1.43;
+	line-height: 1.43;
 }
 .w-80{
 	width: 80%;
