start create practical

--- a/css/textstyle.css
+++ b/css/textstyle.css
@@ -22,8 +22,14 @@
 .t-50{
 	font-size: 50px;
 }
+.t-16{
+	font-size: 16px;
+}
 .t-40{
  font-size: 40px;
+}
+.t-25{
+	font-size: 25px;
 }
 .t-20{
  font-size: 20px;
