--- a/css/pricing.css
+++ b/css/pricing.css
@@ -1,5 +1,155 @@
 .banner {
     background-image: url("../images/banner/about.jpg");
+}
+
+.sec-content {
+    background-color: #e8f0f7;
+}
+
+.price-card .card {
+    height: 450px;
+    box-shadow: 0 0 14px 5px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
 
 }
 
+.price-card .card-header {
+    height: 70px;
+    background-color: #f37422;
+    color:#fff;
+    border:1px solid transparent;
+}
+.price-card .card-header .row .col-7 span.nor{
+	font-size: 16px;
+	text-transform: uppercase;
+	position: absolute;
+	top:15px;
+}
+.price-card .card-header.c-blue {
+    height: 70px;
+    background-color: #e8f0f7;
+    color:#fff;
+}
+.price-card .card-header .row .col-7 span.stan{
+	font-size: 16px;
+	text-transform: uppercase;
+	position: absolute;
+	top:15px;
+	color:#0a395a;
+}
+.price-card .card-header .row .col-5 img{
+	width: 50px;
+	height: 50px;
+	position: absolute;
+	right: 1em;
+}
+
+.price-card .card-body{
+	padding:0 1em 1em 2em;
+	position: relative;
+}
+.price-card .card-body ul {
+	padding-left: 1em;
+}
+.price-card .card-body ul li{
+	font-size: 14px;
+	line-height: 1.29;
+}
+.price-card .card-body ul li:not(:last-child){
+	margin-bottom:0.8em;
+}
+.price-card .card-body .btn2{
+	padding:0.2rem 2em;
+	position:absolute;
+	left:0;
+	right:0;
+	bottom: 2em;
+	margin:0 auto;	
+}
+.price-card .card-body .btn2.dis{
+		color:#e8f0f7;
+		border: solid 2px #e8f0f7;
+
+}
+.price-card .card-body .btn2.dis:hover{
+		color:#e8f0f7;
+		border: solid 2px #e8f0f7;
+		background-color: #fff;
+
+}
+.price-card .card-body p.t-16{
+	margin-bottom: 1em;
+    margin-top: -20px;
+}
+.price-card .card{
+	margin-bottom: 2em;
+}
+.sponsorship{
+	background-color: #fff;
+	padding-top:2em;
+	padding-bottom: 2em;
+}
+.sponsorship .card {
+    height: 450px;
+    box-shadow: 0 0 14px 5px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+}
+
+.sponsorship .card-header {
+    height: 70px;
+    background-color: #0a395a;
+    color:#fff;
+    border:1px solid transparent;
+}
+.sponsorship .card{
+	margin-bottom: 2em;
+}
+
+.sponsorship .card-body{
+	padding:0 1em 1em 2em;
+	position: relative;
+}
+.sponsorship .card-body ul {
+	padding-left: 1em;
+}
+.sponsorship .card-body ul li{
+	font-size: 14px;
+	line-height: 1.29;
+}
+.sponsorship .card-body ul li:not(:last-child){
+	margin-bottom:0.8em;
+}
+.sponsorship .card-body .btn2{
+	padding:0.2rem 2em;
+	position:absolute;
+	left:0;
+	right:0;
+	bottom: 2em;
+	margin:0 auto;	
+}
+.sponsorship .card-body .btn2.dis{
+		color:#e8f0f7;
+		border: solid 2px #e8f0f7;
+
+}
+.sponsorship .container > .row {
+	padding-top:2em;
+}
+.sponsorship .card-header .row .col-9 span.nor{
+	font-size: 16px;
+	text-transform: uppercase;
+	position: absolute;
+	top:15px;
+}
+.sponsorship .card-header .row .col-3 img{
+	width: 50px;
+	height: 50px;
+	position: absolute;
+	right: 1em;
+}
+.limit-text{
+	font-size: 14px;
+	color:#000;
+	margin-left:5px;
+	font-weight: 400;
+}
