--- a/css/faq.css
+++ b/css/faq.css
@@ -24,11 +24,12 @@
 
 .faq .card .card-header {
     background-color: #fff;
-    font-size: 25px;
-    font-weight: 500;
+    font-size: 22px;
+    font-weight: 400;
     line-height: 1.8;
     color: #f37422;
      border-bottom: 1px solid transparent;
+     cursor: pointer;
 }
 .faq .faq-arrow-up{
 	width:12px;
