--- a/css/login.css
+++ b/css/login.css
@@ -141,7 +141,7 @@ iframe {
 .txt2 {
   font-family: Ubuntu-Regular;
   font-size: 15px;
-  color: #57b846;
+  color: #F37422;
   line-height: 1.4;
 }
 
@@ -211,7 +211,7 @@ iframe {
   width: 100%;
   top: 0;
   left: 0;
-  background-color: #57b846;
+  background-color: #F37422;
   padding-top: 50px;
   padding-bottom: 39px;
 }
@@ -297,7 +297,7 @@ iframe {
   padding: 0 20px;
   width: 100%;
   height: 50px;
-  background-color: #57b846;
+  background-color: #0a395a;
   border-radius: 25px;
 
   font-family: Ubuntu-Bold;
