--- a/css/main.css
+++ b/css/main.css
@@ -5,128 +5,176 @@
 /* Paste this css to your style sheet file or under head tag */
 /* This only works with JavaScript, 
 if it's not present, don't show loader */
-.no-js #loader { display: none;  }
-.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.no-js #loader {
+    display: none;
+}
+
+.js #loader {
+    display: block;
+    position: absolute;
+    left: 100px;
+    top: 0;
+}
+
 .se-pre-con {
-  position: fixed;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  z-index: 9999;
-  background: url(imgs/logo/load.svg) center no-repeat #fff; 
-}
-.wrapper{
-  display: none;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url(imgs/logo/load.svg) center no-repeat #fff;
 }
 
-html, body{
-	font-family:'Roboto';
-	margin:0 auto;
-	font-size: 14px;
+.wrapper {
+    display: none;
 }
 
-.container{
-	position: relative;
-	
-}
-.foot1{
-	padding:0.5em 0 .3em 0;
-	background-color: #f37422;	
-	color:#fff;
-}
-.foot-logo{
-	width: 140px;
-}
-.foot2{
-	padding:2em 0;
-	background-color: #0a395a;
-	color:#fff;	
-}
-.foot1 .list-inline{
-	text-align: right;
-}
-.foot1 .list-inline .list-inline-item:not(:last-child) .foot-link{
-	
-	margin-right: .6rem;
-} 
-.foot-link, .foot-link:hover{
-	color:#fff;
+html,
+body {
+    font-family: 'Roboto';
+    margin: 0 auto;
+    font-size: 14px;
 }
 
-.newletter{
-	background-color: #0a395a;
-	padding:3em 0 3.5em 0;
-}
-.newletter-email{
-	color:#fff;
-	width: 100%;
-	background: transparent;
-	border:transparent;
-	border-bottom: 1px solid #fff;
-	padding :0.3em 0em;
-}
-.newletter-email::placeholder{
-	color: #949494;
-	font-size: 14px;
-	font-style: italic;
-}
-.newletter-email:focus{
-	background: #e8f0f7;
-	color:#000;
+.container {
+    position: relative;
 
 }
-.sponsors{
-	padding-top:3em;
-	padding-bottom: 2em;
-	text-align: center;
-	border-bottom: solid 1px #d8d8d8;
+
+.foot1 {
+    padding: 0.5em 0 .3em 0;
+    background-color: #f37422;
+    color: #fff;
 }
-.logo-link{
-	width: 100%;
+
+.foot-logo {
+    width: 140px;
 }
-.banner{
-	background: #0a395a;
-	padding: 100px 0;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
-	
+
+.foot2 {
+    padding: 2em 0;
+    background-color: #0a395a;
+    color: #fff;
+}
+
+.foot1 .list-inline {
+    text-align: right;
+}
+
+.foot1 .list-inline .list-inline-item:not(:last-child) .foot-link {
+
+    margin-right: .6rem;
+}
+
+.foot-link,
+.foot-link:hover {
+    color: #fff;
+}
+
+#mc_embed_signup {
+    background: transparent!important;
+}
+
+#mc_embed_signup form {
+
+    padding: 0 !important;
+
+}
+
+.newletter {
+    background-color: #0a395a;
+    padding: 3em 0 3.5em 0;
+}
+
+#mc_embed_signup input.newletter-email {
+    color: #fff;
+    width: 100%;
+    background: transparent;
+    border: transparent;
+    border-bottom: 1px solid #fff;
+    padding: 0.3em 0em;
+    margin-top:1.5em;
+}
+#mce-error-response{
+	color:red;
+}
+#mce-success-response{
+	color:green;
+}
+
+.newletter-email::placeholder {
+    color: #949494;
+    font-size: 14px;
+    font-style: italic;
+}
+
+.newletter-email:focus {
+    /*background: #e8f0f7;*/
+    color: #000;
+     background: transparent;
+    border: transparent;
+
+}
+
+.sponsors {
+    padding-top: 3em;
+    padding-bottom: 2em;
+    text-align: center;
+    border-bottom: solid 1px #d8d8d8;
+}
+
+.logo-link {
+    width: 100%;
+}
+
+.banner {
+    background: #0a395a;
+    padding: 100px 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
 }
 
 /*hr*/
-.or-line-140{
-	width: 140px;
-	height: 8px;
-	background-color: #f37422;
+.or-line-140 {
+    width: 140px;
+    height: 8px;
+    background-color: #f37422;
 }
-.or-line{
-	width: 120px;
-	height: 8px;
-	background-color: #f37422;
+
+.or-line {
+    width: 120px;
+    height: 8px;
+    background-color: #f37422;
 }
-.or-line-thin{
-	width: 100px;
-	height: 4px;
-	background-color: #f37422;
+
+.or-line-thin {
+    width: 100px;
+    height: 4px;
+    background-color: #f37422;
 }
 
 
 /*content*/
 
-.sec-content{
-	padding:3rem 0 2.5rem 0;
-	line-height: 1.43;
+.sec-content {
+    padding: 3rem 0 2.5rem 0;
+    line-height: 1.43;
 }
-.w-80{
-	width: 80%;
-	margin:0 auto;
+
+.w-80 {
+    width: 80%;
+    margin: 0 auto;
 }
-.w-70{
-	width: 70%;
-	margin:0  auto; 
+
+.w-70 {
+    width: 70%;
+    margin: 0 auto;
 }
-.w-60{
-	width: 60%;
-	margin:0 auto;
+
+.w-60 {
+    width: 60%;
+    margin: 0 auto;
 }
