--- a/css/become.css
+++ b/css/become.css
@@ -24,31 +24,34 @@
 
 .tag-spon .card {
     box-shadow: 0 0 14px 5px rgba(0, 0, 0, 0.1);
-    height:430px;
+    height: 430px;
     margin-bottom: 2em;
 
 }
 
-.tag-spon .card-body{
-		padding:4em 3em 4em 3em;
+.tag-spon .card-body {
+    padding: 4em 3em 4em 3em;
 
 }
-.tag-spon .card-body ul li:not(:last-child){
-		margin-bottom: 1em;
+
+.tag-spon .card-body ul li:not(:last-child) {
+    margin-bottom: 1em;
 }
-.tag-spon .card-body .btn2{
-	position: absolute;
-	bottom: 2em;
-	right: 3em;
+
+.tag-spon .card-body .btn2 {
+    position: absolute;
+    bottom: 2em;
+    right: 3em;
 }
-.price-tag img{
-	width: 50px;
-	height: 50px;
-	position: absolute;
-	top:10px;
-	left:0;
-	right: 0;
-	margin:0 auto;
+
+.price-tag img {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 10px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
 }
 
 .price-tag span {
@@ -56,13 +59,14 @@
     font-weight: 500;
     text-align: center;
     position: absolute;
-    left:0;
+    left: 0;
     right: 0;
-    bottom: -16px ;
-   	margin-left:auto;
-   	margin-right: auto;
-   	z-index: 3;
+    bottom: -16px;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 3;
 }
+
 .price-tag {
     width: 140px;
     height: 102px;
@@ -75,7 +79,7 @@
 }
 
 .price-tag:before {
-	border-top: 32px solid rgba(0, 0, 0, 0.26);
+    border-top: 32px solid rgba(0, 0, 0, 0.26);
     border-left: 70px solid transparent;
     border-right: 70px solid transparent;
     content: "";
@@ -87,7 +91,8 @@
     filter: blur(2px);
     z-index: 1;
 }
-.price-tag:after{
+
+.price-tag:after {
     border-top: 35px solid #f37422;
     border-left: 70px solid transparent;
     border-right: 70px solid transparent;
@@ -97,5 +102,25 @@
     position: absolute;
     bottom: -34px;
     width: 0;
-    z-index: 2;     
+    z-index: 2;
+}
+
+@media screen and (max-width:768px) {
+    .sec-content .t-title.t-40.c-blue.text-center {
+        font-size: 25px;
+    }
+
+    .sec-content .w-80 {
+        width: 100%;
+    }
+
+    .tag-title {
+        font-size: 14px;
+    }
+    .tag-spon .card{
+        height: 500px;
+    }
+    .tag-spon .card-body {
+        padding: 4em 1em 4em 1em;
+    }
 }
