--- a/css/faq.css
+++ b/css/faq.css
@@ -44,3 +44,15 @@
 	padding:2rem;
 	padding-left: 3em;
 }
+@media screen and (max-width:768px){
+    .faq .t-40.c-blue.t-title.text-center{
+        font-size: 25px;
+    }
+    .faq .w-80{
+        width: 100%;
+    }
+    .faq .card .card-header{
+        font-size: 16px;
+        line-height: 1.5;
+    }
+}
