--- a/css/howtoget.css
+++ b/css/howtoget.css
@@ -25,3 +25,14 @@
 	margin-right: auto;
 	margin-top:2em;
 }
+@media screen and (max-width: 768px) {
+    .sec-content .t-40.t-title.c-blue.text-center {
+        font-size: 25px;
+    }
+      .w-70, .w-80{
+    	width: 100%;
+    }
+    .choose-best .card{
+    	height: 400px;
+    }
+}
