--- a/css/pricing.css
+++ b/css/pricing.css
@@ -153,3 +153,14 @@
 	margin-left:5px;
 	font-weight: 400;
 }
+@media screen and (max-width: 768px){
+	 .sec-content .t-40.t-title.c-blue.text-center{
+        font-size: 25px;
+    }
+    .sec-content .w-80{
+    	width:100%;
+    }
+    .sec-content.price-card{
+    	padding-top:1em;
+    }
+}
